src/styles/rx-data-table.less
@import "mixins.less";

.data-table{
    margin: 0px 25px;

    .pagination-container {
        text-align: center;
        width: 100%;
        margin-bottom: 15px;
    }

    .items-per-page-container {
        text-align: center;
        width: 100%;
    }
}

.data-info-row {
    display: block;
    text-align: right;
}

.data-header {
    .flexbox-display();
    .user-select(none);
}

.data-header-cell {
    text-align: left;
    background: #878787;
    color: #fff;
    border: 1px solid #6e6e6e;
    border-right: 0px;
    cursor: pointer;
    //margin-right: -1px;
    overflow: visible;
    white-space: nowrap;

    &::last-child {
        border-right: 1px solid #6e6e6e;
        margin-right: -2px;
    }

    .btn-link {
        cursor: pointer;
        background: none;
        border: none;
    }

    .data-link, .checkbox-span {
        display: block;
        height: auto;
        width: 100%;
        text-align: left;
    }

    .data-link {
        color: #FFF;
        padding: 10px;
    }

    .checkbox-span {
        padding: 7px;
        padding-bottom: 8px;
        text-align: center;
    }
}

.data-row-container {
    &.attention {
        border-left: 3px solid #3399CC !important;
        margin-top: 5px;
        overflow: hidden;

        .data-row {
            border-top: 0px;
        }
    }
}

.data-row {
    background-color: #fff;
    border-bottom: 1px solid rgb(238, 238, 238);
    height: 45px;
    .flexbox-display();

    .label {
        top: 0px;
        font-size: .85em;
    }

    &.expanded {
        background-color: rgb(177, 215, 251);
    }

    &:nth-child(odd) {
        background-color: rgb(246, 246, 246);
    }

    .data-cell {
        height: 100%;
        border-left: 1px solid #eee;
        border-right: 0px;
        margin-right: -1px;

        .checkbox {
            text-align: center;
        }

        &:last-child {
            border-right: 1px solid #eee;
            margin-right: -2px;
        }

        & > span,
        & > div {
            display: block;
            margin: 10px;
        }

        .data-table-cell-icon {
            display: block;
            vertical-align: middle;
            float: left;
            margin: 2px;
        }

        .data-cell-content {
            white-space: pre;
            display: block;
            overflow: hidden;
            text-overflow: ellipsis;
            vertical-align: middle;
        }
    }

    &:hover {
        background-color: #f5f5f5;
    }

    &.one-row {
        height: 45px;
    }

    &.two-row {
        height: 65px;
    }
}

.data-editable .data-editable-field {
    & + .editable-text .editable-input {
        width: 100%;
    }

    & + .editable-select .editable-input {
        width: ~"calc(100% - 20px)";
    }

    &.editable-click {
        color: #547917;
        border-bottom-color: #547917;
        font-weight: 600;
        line-height: 19px;

        &:hover {
            cursor: pointer;
            text-decoration: underline;
        }
    }
}

.data-cell.nullable {
    & .data-table-field-nullable {
        display: none;
        color: #547917;
        cursor: pointer;
    }

    & .editable-wrap {
        width: ~"calc(100% - 25px)";
        margin-right: 8px;
    }

    & .editable-wrap + .data-table-field-nullable,
    & .editable-wrap + .data-table-type-loader + .data-table-field-nullable {
        display: inline-block;
    }
}

.data-table-config-container {
    position: relative;
    width: 15px;
    display: inline-block;

    .data-table-config-icon {
        cursor: pointer;
        color: #547917;
        font-size: 14px;
    }
}

.data-table-config {
    position: absolute;
    overflow: visible;
    right: 0px;
    background-color: #FFF;
    border: 1px solid #000;
    border-radius: 5px;
    padding: 4px;
    min-width: 150px;

    & > .header {
        text-align: center;
        font-size: 11px;
        font-weight: bold;
        margin-bottom: 2px;
        border-bottom: 2px solid #000;
    }

    .data-config-row {
        &:nth-child(even) {
            background-color: rgb(246, 246, 246);
        }

        .flexbox-display();
        margin: 2px 0px;

        & > .header {
            font-size: 10px;
            font-weight: bold;
            margin-bottom: 2px;
            border-bottom: 1px solid #000;
        }
    }
}

.data-table-multi-sort {
    
    .multi-sort-select {
        .flexbox(4);
        text-align: left;
    }

    .multi-sort-reverse-icon,
    .multi-sort-remove-icon {
        .flexbox(1);
        text-align: center;
        cursor: pointer;
    }

    .multi-sort-add {
        width: 100%;
        text-align: center;
        font-size: 10px;
        font-weight: bold;
        margin-top: 5px;
        cursor: pointer;
    }
}

.data-table-column-display {
    .header {
        margin: 0 auto;
    }

    .column-preset-row {
        text-align: center;
    }

    .data-config-column-title {
        text-align: left;
        .flexbox(3);
    }

    .column-order-arrows{
        .flexbox(1);
        text-align: left;
        padding-left: 5px;

        .btn-move-up {
            margin-left: 15px;
        }

        .btn-move-down + .btn-move-up {
            margin-left: 0px;
        }
    }

    .column-hide-display {
        .flexbox(1);
        text-align: center;
    }
}

.menu-column {
    position: relative;

    .menu-toggle {
        color: #AAA;
        min-height: 14px;

        &:hover, &:active {
            color: #555555;
        }
    }

    .menu-items {
        z-index: 99;
        position: absolute;
        top: -10px;
        right: 98px;
        min-width: 12em;
        font-size: .9em;
        border: 4px solid #ffffff;
        border-radius: 4px;
        background: #ffffff;
        text-shadow: rgba(0, 0, 0, 0.09) 1px 1px 1px;
        box-shadow: rgba(0, 0, 0, 0.09) 1px 1px 4px 0px;
        padding: 6px;

        &::before {
            content: "\f0da";
            font-family: FontAwesome;
            font-style: normal;
            font-weight: normal;
            text-decoration: inherit;
            color: #fff;
            font-size: 24px;
            display: block;
            right: -4px;
            position: absolute;
            top: 0;
            width: 0;
            z-index: 1;
        }

        .menu-item {
            margin: 3px 0px;
        }
    }
}

.data-header-expander {
    .flexbox(1);
}

.data-row-expander {
    .flexbox(1);
    position: relative;
    padding: 0px;
    height: 100%;

    .data-row-expansion {
        height: 100%;
        width: 100%;
        cursor: pointer;
        background: none;
        border: none;
        background-color: rgba(148, 201, 249, .5);

        .expander-icon {
            position: relative;

            &::after {
                content: '';
                position: absolute;
                font-size: 2em;
                content: "\00bb"; // angle quotation mark, right (&raquo;)
                -webkit-transform: rotate(90deg) scaleX(1);
                transform: rotate(90deg) scaleX(1);
                top: 7px;
                line-height: 0;
                right: .25em;
            }

        }

        &.expanded {
            background-color: rgb(148, 201, 249);

            .expander-icon {
                color: #FFF;

                &::after {
                    -webkit-transform: rotate(90deg) scaleX(-1);
                    transform: rotate(90deg) scaleX(-1);
                }
            }
        }
    }
}

.data-row-details {
    padding: 2px;
    background-color: rgb(233, 243, 254);
}

@import "pagination.less";

